test/fixtures/public/fail/semantic/booleanOper.jmm
/*  REASON:
    Operation && only accepts booleans
*/

class BooleanOper {
    public static void main(String[] a) { 
        boolean b;
        int c;
        int d;

        c = 1;
        d = 1;

        b = c && d;
        b = c < d;
    }
}
